--- a/get-app-init.json
+++ b/get-app-init.json
@@ -176,6 +176,6 @@
       "play.google.com",
       "pf.kakao.com"
     ],
-    "splash_image_url": "https:\/\/dev-img.soldout.co.kr\/app_splash\/splash_20250711.png"
+    "splash_image_url": "https://raw.githubusercontent.com/kmpark13/json/main/image/img_splash_open_run.png"
   }
 }
